--- a/sql_to_weaviate.ipynb
+++ b/sql_to_weaviate.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [
+    "# SQL database to Weaviate using dlt library\n",
+    "Example for [Public MySQL Database.](https://docs.rfam.org/en/latest/database.html)"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "b34fe934cb4f242c"
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "outputs": [],
@@ -10,45 +21,10 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-07T16:15:35.646303736Z",
      "start_time": "2023-09-07T16:15:32.762937679Z"
     }
    },
    "id": "2841cf5886b5df42"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Looking in indexes: https://pypi.org/simple, https://packagecloud.io/github/git-lfs/pypi/simple\r\n",
-      "Requirement already satisfied: sqlalchemy in /home/alenaastrakhantseva/.cache/pypoetry/virtualenvs/weaviate-demo-9BqQS6RD-py3.10/lib/python3.10/site-packages (2.0.20)\r\n",
-      "Collecting pymysql\r\n",
-      "  Obtaining dependency information for pymysql from https://files.pythonhosted.org/packages/e5/30/20467e39523d0cfc2b6227902d3687a16364307260c75e6a1cb4422b0c62/PyMySQL-1.1.0-py3-none-any.whl.metadata\r\n",
-      "  Downloading PyMySQL-1.1.0-py3-none-any.whl.metadata (4.4 kB)\r\n",
-      "Requirement already satisfied: typing-extensions>=4.2.0 in /home/alenaastrakhantseva/.cache/pypoetry/virtualenvs/weaviate-demo-9BqQS6RD-py3.10/lib/python3.10/site-packages (from sqlalchemy) (4.7.1)\r\n",
-      "Requirement already satisfied: greenlet!=0.4.17 in /home/alenaastrakhantseva/.cache/pypoetry/virtualenvs/weaviate-demo-9BqQS6RD-py3.10/lib/python3.10/site-packages (from sqlalchemy) (2.0.2)\r\n",
-      "Downloading PyMySQL-1.1.0-py3-none-any.whl (44 kB)\r\n",
-      "\u001B[2K   \u001B[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001B[0m \u001B[32m44.8/44.8 kB\u001B[0m \u001B[31m2.0 MB/s\u001B[0m eta \u001B[36m0:00:00\u001B[0m\r\n",
-      "\u001B[?25hInstalling collected packages: pymysql\r\n",
-      "Successfully installed pymysql-1.1.0\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "!pip install sqlalchemy pymysql"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-09-07T16:25:00.258134826Z",
-     "start_time": "2023-09-07T16:24:56.700176968Z"
-    }
-   },
-   "id": "998f9710b6661067"
   },
   {
    "cell_type": "code",
@@ -86,6 +62,21 @@
     }
    },
    "id": "82b557c903459372"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "outputs": [],
+   "source": [
+    "!pip install -q sqlalchemy"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-09-07T16:43:27.653554239Z"
+    }
+   },
+   "id": "998f9710b6661067"
   },
   {
    "cell_type": "code",
@@ -157,7 +148,7 @@
     "import dlt\n",
     "from dlt.destinations.weaviate import weaviate_adapter\n",
     "\n",
-    "from sql_database import sql_database, sql_table\n",
+    "from sql_database import sql_table\n",
     "\n",
     "pipeline = dlt.pipeline(\n",
     "     pipeline_name=\"rfam\", destination='weaviate', dataset_name=\"rfam\"\n",
@@ -195,6 +186,7 @@
     }
    ],
    "source": [
+    "# class_name = table name \"Family\" + dataset name \"Rfam\"\n",
     "show_data(\"Rfam_Family\", [\"description\"])"
    ],
    "metadata": {
@@ -205,16 +197,6 @@
     }
    },
    "id": "942793b835309409"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "9ee3923ac6e8efa8"
   }
  ],
  "metadata": {
