--- a/sql_to_weaviate.ipynb
+++ b/sql_to_weaviate.ipynb
@@ -156,7 +156,7 @@
     "\n",
     "load_source = sql_table(table=\"family\",)\n",
     "load_info = pipeline.run(weaviate_adapter(load_source, vectorize=\"description\", tokenization={\"description\": \"word\"}))\n",
-    "# load_info = pipeline.run(load_source, write_disposition=\"replace\")\n",
+    "\n",
     "# pretty print the information on data that was loaded\n",
     "row_counts = pipeline.last_trace.last_normalize_info\n",
     "print(row_counts)\n",
@@ -186,7 +186,7 @@
     }
    ],
    "source": [
-    "# class_name = table name \"Family\" + dataset name \"Rfam\"\n",
+    "# class_name: table name \"Family\" + dataset name \"Rfam\"\n",
     "show_data(\"Rfam_Family\", [\"description\"])"
    ],
    "metadata": {
