add some links and info about creds

--- a/sql_to_weaviate.ipynb
+++ b/sql_to_weaviate.ipynb
@@ -27,6 +27,16 @@
    "id": "2841cf5886b5df42"
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "Let's init [verified source](https://dlthub.com/docs/dlt-ecosystem/verified-sources/sql_database)  `sql_database` with dlt cli command:"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "f4b452c86009840e"
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "outputs": [
@@ -113,6 +123,27 @@
     }
    },
    "id": "f96b7b53f2250ad"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Put credentials into `.dlt/secrets.toml` file like this:\n",
+    "\n",
+    "```\n",
+    "[sources.sql_database.credentials]\n",
+    "drivername = \"mysql+pymysql\" # driver name for the database\n",
+    "database = \"Rfam\" # database name\n",
+    "username = \"rfamro\" # username associated with the database\n",
+    "host = \"mysql-rfam-public.ebi.ac.uk\" # host address\n",
+    "port = \"4497\" # port required for connection\n",
+    "```\n",
+    "\n",
+    "[More info about credentials.](https://dlthub.com/docs/general-usage/credentials)"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "b71060e1b9377e70"
   },
   {
    "cell_type": "code",
