--- a/zendesk_to_weaviate.ipynb
+++ b/zendesk_to_weaviate.ipynb
@@ -158,16 +158,23 @@
         "import os\n",
         "import pandas as pd\n",
         "import weaviate\n",
+        "\n",
+        "def response_to_table(response, class_name, columns):\n",
+        "    df = pd.DataFrame(response['data']['Get'][class_name], columns=columns)\n",
+        "    display(df)\n",
+        "\n",
+        "\n",
         "client = weaviate.Client(\n",
         "    url='https://YOUR_WEAVIATE_URL',\n",
         "    auth_client_secret=weaviate.AuthApiKey(\n",
         "        api_key='YOUR_WEAVIATE_API_KEY'\n",
         "    ),\n",
         ")\n",
+        "\n",
         "response = (\n",
-        "      client.query\n",
-        "      .get(\"Tickets\", [\"subject\", \"description\", \"created_at\"])\n",
-        "      .do()\n",
+        "    client.query\n",
+        "    .get(\"Tickets\", [\"subject\", \"description\", \"created_at\"])\n",
+        "    .do()\n",
         ")\n",
         "\n",
         "response_to_table(response, 'Tickets', [\"subject\", \"description\", \"created_at\"])"
