demo for personio

--- a/pdf_to_weaviate.ipynb
+++ b/pdf_to_weaviate.ipynb
@@ -20,71 +20,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "outputs": [],
+   "execution_count": 1,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001B[33mDEPRECATION: nb-black 1.0.7 has a non-standard dependency specifier black>='19.3'; python_version >= \"3.6\". pip 23.3 will enforce this behaviour change. A possible replacement is to upgrade to a newer version of nb-black or contact the author to suggest that they release a version with a conforming dependency specifiers. Discussion can be found at https://github.com/pypa/pip/issues/12063\u001B[0m\u001B[33m\r\n",
+      "\u001B[0m\u001B[33mDEPRECATION: distro-info 1.1build1 has a non-standard version number. pip 23.3 will enforce this behaviour change. A possible replacement is to upgrade to a newer version of distro-info or contact the author to suggest that they release a version with a conforming version number. Discussion can be found at https://github.com/pypa/pip/issues/12063\u001B[0m\u001B[33m\r\n",
+      "\u001B[0m"
+     ]
+    }
+   ],
    "source": [
     "!pip install -q \"dlt[weaviate]\""
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-09-01T13:13:14.513707312Z"
+     "end_time": "2023-09-15T08:53:10.297746830Z",
+     "start_time": "2023-09-15T08:53:06.874100810Z"
     }
    },
    "id": "cad1d29536ff53d7"
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Looking up the init scripts in \u001B[1mhttps://github.com/dlt-hub/verified-sources.git\u001B[0m...\r\n",
-      "No files to update, exiting\r\n"
+      "\u001B[33mDEPRECATION: nb-black 1.0.7 has a non-standard dependency specifier black>='19.3'; python_version >= \"3.6\". pip 23.3 will enforce this behaviour change. A possible replacement is to upgrade to a newer version of nb-black or contact the author to suggest that they release a version with a conforming dependency specifiers. Discussion can be found at https://github.com/pypa/pip/issues/12063\u001B[0m\u001B[33m\r\n",
+      "\u001B[0m\u001B[33mDEPRECATION: distro-info 1.1build1 has a non-standard version number. pip 23.3 will enforce this behaviour change. A possible replacement is to upgrade to a newer version of distro-info or contact the author to suggest that they release a version with a conforming version number. Discussion can be found at https://github.com/pypa/pip/issues/12063\u001B[0m\u001B[33m\r\n",
+      "\u001B[0m"
      ]
     }
    ],
-   "source": [
-    "!dlt --non-interactive init unstructured_weaviate weaviate --branch features/unstructured_weaviate"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-09-01T13:13:18.891099545Z",
-     "start_time": "2023-09-01T13:13:15.798635555Z"
-    }
-   },
-   "id": "9393bf25057e9beb"
-  },
-  {
-   "cell_type": "markdown",
-   "source": [],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "602e6197670898a8"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "outputs": [],
    "source": [
     "!pip install PyPDF2 -q"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-01T13:13:19.902171195Z",
-     "start_time": "2023-09-01T13:13:18.892644176Z"
+     "end_time": "2023-09-15T08:53:25.123495992Z",
+     "start_time": "2023-09-15T08:53:22.077402952Z"
     }
    },
    "id": "4ce0f4c6311de5a4"
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 3,
+   "outputs": [],
+   "source": [
+    "import dlt\n",
+    "\n",
+    "from PyPDF2 import PdfReader\n",
+    "\n",
+    "\n",
+    "@dlt.transformer(primary_key=\"page_id\", write_disposition=\"merge\")\n",
+    "def pdf_to_text(file_item, separate_pages: bool = False):\n",
+    "    if not separate_pages:\n",
+    "        raise NotImplementedError()\n",
+    "    # extract data from PDF page by page\n",
+    "    reader = PdfReader(file_item[\"file_path\"])\n",
+    "    for page_no in range(len(reader.pages)):\n",
+    "        # add page content to file item\n",
+    "        page_item = dict(file_item)\n",
+    "        page_item[\"text\"] = reader.pages[page_no].extract_text()\n",
+    "        page_item[\"page_id\"] = file_item[\"file_name\"] + \"_\" + str(page_no)\n",
+    "        yield page_item"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-09-15T08:53:32.464256370Z",
+     "start_time": "2023-09-15T08:53:31.712273362Z"
+    }
+   },
+   "id": "9393bf25057e9beb"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "import os\n",
@@ -114,8 +134,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-01T13:21:35.695154563Z",
-     "start_time": "2023-09-01T13:21:35.646768962Z"
+     "end_time": "2023-09-15T08:54:04.659987424Z",
+     "start_time": "2023-09-15T08:54:04.556715377Z"
     }
    },
    "id": "9bb7a37329d99b46"
@@ -152,8 +172,6 @@
    "source": [
     "import dlt\n",
     "from dlt.destinations.weaviate import weaviate_adapter\n",
-    "\n",
-    "from unstructured_weaviate import pdf_to_text\n",
     "\n",
     "\n",
     "from unstructured_weaviate.local_folder import local_folder_resource\n",
